SVY-20465 Bootstrap extra carousel not visible in the form fix css

--- a/bootstrapextracomponents/projects/bootstrapextracomponents/src/carousel/bts-extra-carousel.css
+++ b/bootstrapextracomponents/projects/bootstrapextracomponents/src/carousel/bts-extra-carousel.css
@@ -1,4 +1,4 @@
-.svy-wrapper>*>.bts-extra-carousel {
+.bts-extra-carousel {
 	width: 100%;
 	height: 100%;
 }
@@ -9,7 +9,7 @@
 	height: 100%;
 }
 
-.svy-wrapper>*>.bts-extra-carousel>.carousel-inner {
+.bts-extra-carousel > .carousel-inner {
 	height: inherit;
 	width: inherit;
 }
